# dbt-databricks-example

./: .gitignore  README.md  dbt_project.yml  pyproject.toml
.config/: profiles.yml
.github/workflows/: main.yml  schedule-daily.yml  schedule-monthly.yaml  schedule-weekly.yml  schedule.yml  test.yml
macros/: build_ci_db.sql  clean_ci_db.sql  drop_db.sql
models/example/: example.sql  schema.yml
models/test/: schema.yml
